Updated 02-gs-spring-boot for Spring Boot v4